--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans:ital,wght@0,400;0,800;1,300;1,400&display=swap");
 :root {
-  --width-navbar: 250px;
-  --text-color: #4d4e53;
+  --background-color: #eee;
+  --text-color: #000;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+html {
+  font-family: "Open Sans", sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  color: var(--text-color);
+}
+
+body {
+  background-color: var(--background-color);
+}
+
+#header {
+  padding: 0 20px;
+  width: 100%;
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#nav-bar ul {
+  width: 35vw;
+  display: flex;
+  justify-content: space-around;
+  font-size: 2rem;
+}
+
+#nav-bar li {
+  list-style-type: none;
+}
+
+#nav-bar a {
+  text-decoration: none;
+  color: var(--text-color);
+  cursor: pointer;
+}
+
+#header-img {
+  width: 400px;
 }
